syntax = "proto3";

option csharp_namespace = "MunitS.Protos";

package object;

service ObjectsService {
  rpc UploadObject(UploadObjectRequest) returns (ObjectServiceStatusResponse);
  rpc DeleteObject(DeleteObjectRequest) returns (ObjectServiceStatusResponse);
}

// Upload object
message UploadObjectRequest {
  string bucketName = 1;
  string fileKey = 2;
  string contentType = 3;
  bytes data = 4;
}

// Delete object
message DeleteObjectRequest {
  string bucketName = 1;
  string fileKey = 2;
}


// Status response
message ObjectServiceStatusResponse {
  string status = 1;
}